# straightshot

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
dashboard/: dashboard-sse.js  index.html  influencer.html
docs/: WHITEPAPER.md  launch-copy.md  straightshot_whitepaper.aux  straightshot_whitepaper.out  straightshot_whitepaper.tex  whitepaper.tex
middleware/: README.md  shim.py
scripts/: fit_lens.py  runpod_launch.sh  serve.py  train_probe.py
straightshot/: __init__.py  core.py  serve.py
